--- a/correto.html
+++ b/correto.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acertou</title>
+    <link rel="stylesheet" href="certo.css">
 </head>
 <body>
     <h1>Parabens! Você acertou a palavra!</h1>
+    <button><a href="index.html">Voltar ao inicio</a></button>
 
 
     <script src="script.js"></script>
