--- a/erro.html
+++ b/erro.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Errou</title>
+    <link rel="stylesheet" href="erro.css">
 </head>
 <body>
     <h1>Ops! A palavra está incorreta.</h1>
+    <button> <a href="index.html">Tente novamente</a></button>
 
 
 
